sass/src/css/main.scss
/**
 * @TODO (review/update/fix)
 *
 * - blockuotes: > element
 * - code in link: [`code`](https://pepe.com)
 * - Rendering in mobile devices screens
 * - Improve day/night styles
*/

.w {
  max-width: 1000px;
}

header nav {
    background: #ebebeb;
    padding-top: 0.6em;

    a {
        text-decoration: none;
        padding: 0.2em 0.4em;
    }

    span {
        border: 0.2em solid #fff;
        padding: 0.2em 0.2em;
        background-color: #fff;
    }
}

header p.slug {
    float: left;
}

header h1 {
    text-align: center;

    &:before { content: '[' }
    &:after { content: attr(data-content) ']' }
}

p.not-found {
    padding: 0.5em 0;
    text-align: center;
    text-transform: uppercase;
    font-size: 4rem;
    line-height: 1;

    span.code {
        font-size: 3rem;
        display: block;
    }
}

nav.toc {
    background: #ebebeb;
    margin: 2em 0;
    padding: 0.8em;
    text-align: left;

    ul {
        margin-bottom: 0;
    }
}

/**
 * Open & Close Transitions with <details>
 *
 * @see https://nerdy.dev/open-and-close-transitions-for-the-details-element
 */
details.auto-hide {
    border: black thin solid;
    padding: 0.4em;

    @media (prefers-reduced-motion: no-preference) {
        interpolate-size: allow-keywords;
    }

    &::details-content {
        opacity: 0;
        block-size: 0;
        overflow-y: clip;
        transition: content-visibility 1s allow-discrete, opacity 1s, block-size 1s;
    }

    &[open]::details-content {
        opacity: 1;
        block-size: auto;
    }

    summary {
        cursor: pointer;
    }
}

p, ol, ul {
    a {
        text-decoration-skip-ink: auto;
        text-underline-offset: 0.14em;

        &:has(code) {
            text-decoration-color: #fff;

            code {
                background: #00e;
            }
        }
    }

    code {
        padding: 0.05em 0.2em;
    }
}

p > img {
    border: 0.1em solid #000;
}

/**
 * https://freefrontend.com/css-quote-styles/
 */
blockquote {
    border: none;
    margin: 1em 0;
    overflow: hidden;
    padding: 0.4em 0.5em 0.4em 2em;
    position: relative;

    &::before,
    &::after{
        color: #777;
        position: absolute;
    }

    &::before {
        content:  url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 24 24' fill='%23777777'><path d='M9.983 3v7.391C9.983 16.095 6.252 19.961 1 21l-.995-2.151C2.437 17.932 4 15.211 4 13H0V3h9.983zM24 3v7.391c0 5.704-3.748 9.571-9 10.609l-.996-2.151C16.437 17.932 18 15.211 18 13h-3.983V3H24z'/></svg>");
        left: 0;
        top: -0.1em;
    }

    &::after {
        content: "";
        left: 5px;
        top: 20px;
        width: 1px;
        height: 100%;
        background-color: currentColor;
    }

    p {
        margin: 0;
    }

    p + p {
        margin-top: 1em;
    }
}

footer p.foot-note {
    font-size: 0.8rem;
    margin: 0.2em 0;
    text-align: center;

    a.creative-commons {
        text-decoration: none;

        span {
            text-decoration: underline;
        }

        img {
            display: inline;
            vertical-align: bottom;
            width: 1.5em;
        }
    }
}

